Add urlFetchWhitelist to manifest

--- a/appsscript.json
+++ b/appsscript.json
@@ -1,4 +1,5 @@
 {
+  "urlFetchWhitelist": ["https://app.asana.com/api/"],
   "timeZone": "America/Sao_Paulo",
   "dependencies": {
     "libraries": [{
