--- a/appsscript.json
+++ b/appsscript.json
@@ -1,5 +1,5 @@
 {
-  "urlFetchWhitelist": ["https://app.asana.com/api/"],
+  "urlFetchWhitelist": ["https://app.asana.com/"],
   "timeZone": "America/Sao_Paulo",
   "dependencies": {
     "libraries": [{
